--- a/index.html
+++ b/index.html
@@ -8,13 +8,31 @@
     <link href="assets/fontawesome-free-5.15.3-web/css/all.css" rel="stylesheet">
 </head>
 <body>
-    <nav></nav>
     <div class="main">
+      <nav>
+        <ul class="navbar">
+          <li>Apple</li>
+          <li>Store</li>
+          <li>Mac</li>
+          <li>iPod</li>
+          <li>iPhone</li>
+          <li>iPad</li>
+          <li>iTunes</li>
+          <li>Support</li>
+          <li>Search</li>
+        </ul>
+      </nav>
       <div class="container">
-      <h1>What will your verse be?</h1>
-      <h2>Everyone has something to share. See how people are using </h2>
-      <h2>iPad in their unique ways to add to the world's story.</h2>
-      <h3>Watch the "Your Verse" film and explore the stories</h3>
+        <h1>What will your verse be?</h1>
+        <h2>Everyone has something to share. See how people are using </h2>
+        <h2>iPad in their unique ways to add to the world's story.</h2>
+        <h3>Watch the "Your Verse" film and explore the stories</h3>
+      </div>
     </div>
+    <div class="bottom-row">
+      <div class="promo promo-1"></div>
+      <div class="promo promo-2"></div>
+      <div class="promo promo-3"></div>
+      <div class="promo promo-4"></div>
     </div>
 </body>
